--- a/packages/suite-data/files/translations/lol.json
+++ b/packages/suite-data/files/translations/lol.json
@@ -1978,7 +1978,7 @@
   "TR_VIEW_ONLY_EXPLANATION": "crwdns35478:0crwdne35478:0",
   "TR_VIEW_ONLY_PROMO_NOT_NOW": "crwdns35480:0crwdne35480:0",
   "TR_VIEW_ONLY_PROMO_YES": "crwdns35482:0crwdne35482:0",
-  "TR_VIEW_ONLY_TOOLTIP_BUTTON": "crwdns35484:0crwdne35484:0",
+  "TR_GOT_IT_BUTTON": "crwdns35484:0crwdne35484:0",
   "TR_VIEW_ONLY_TOOLTIP_CHANGE_INFO": "crwdns35486:0crwdne35486:0",
   "TR_VIEW_ONLY_TOOLTIP_DESCRIPTION": "crwdns35488:0crwdne35488:0",
   "TR_VIEW_ONLY_TOOLTIP_TITLE": "crwdns35490:0crwdne35490:0",
