fix(connect-explorer-nextra): error icon rendering issue

--- a/packages/connect-explorer-nextra/src/pages/methods/device/changeLanguage.mdx
+++ b/packages/connect-explorer-nextra/src/pages/methods/device/changeLanguage.mdx
@@ -25,7 +25,7 @@ export const paramDescriptions = {
 
 ## Change language
 
-<Callout type="error" emoji="️🚫">
+<Callout type="error">
     **Management command** - this method is restricted to Trezor.io and can't be used in 3rd party
     applications.
 </Callout>
