--- a/packages/connect-explorer-nextra/src/pages/methods/device/applySettings.mdx
+++ b/packages/connect-explorer-nextra/src/pages/methods/device/applySettings.mdx
@@ -28,7 +28,7 @@ export const paramDescriptions = {
 
 ## Apply settings
 
-<Callout type="error" emoji="️🚫">
+<Callout type="error">
     **Management command** - this method is restricted to Trezor.io and can't be used in 3rd party
     applications.
 </Callout>
