--- a/packages/connect-explorer-nextra/src/pages/methods/device/authenticateDevice.mdx
+++ b/packages/connect-explorer-nextra/src/pages/methods/device/authenticateDevice.mdx
@@ -22,7 +22,7 @@ export const paramDescriptions = {
 
 ## authenticateDevice
 
-<Callout type="error" emoji="️🚫">
+<Callout type="error">
     **Management command** - this method is restricted to Trezor.io and can't be used in 3rd party
     applications.
 </Callout>
