--- a/packages/connect-explorer-nextra/src/pages/methods/device/backupDevice.mdx
+++ b/packages/connect-explorer-nextra/src/pages/methods/device/backupDevice.mdx
@@ -7,7 +7,7 @@ import { ApiPlayground } from '../../../components/ApiPlayground';
 
 ## Backup device
 
-<Callout type="error" emoji="️🚫">
+<Callout type="error">
     **Management command** - this method is restricted to Trezor.io and can't be used in 3rd party
     applications.
 </Callout>
