--- a/packages/connect-explorer-nextra/src/pages/methods/device/changeWipeCode.mdx
+++ b/packages/connect-explorer-nextra/src/pages/methods/device/changeWipeCode.mdx
@@ -20,7 +20,7 @@ export const paramDescriptions = {
 
 ## Change wipe code
 
-<Callout type="error" emoji="️🚫">
+<Callout type="error">
     **Management command** - this method is restricted to Trezor.io and can't be used in 3rd party
     applications.
 </Callout>
