--- a/packages/connect-explorer-nextra/src/pages/methods/device/getFirmwareHash.mdx
+++ b/packages/connect-explorer-nextra/src/pages/methods/device/getFirmwareHash.mdx
@@ -23,7 +23,7 @@ export const paramDescriptions = {
 
 ## getFirmwareHash
 
-<Callout type="error" emoji="️🚫">
+<Callout type="error">
     **Management command** - this method is restricted to Trezor.io and can't be used in 3rd party
     applications.
 </Callout>
