--- a/packages/connect-explorer-nextra/src/pages/methods/device/resetDevice.mdx
+++ b/packages/connect-explorer-nextra/src/pages/methods/device/resetDevice.mdx
@@ -26,7 +26,7 @@ export const paramDescriptions = {
 
 ## Reset device
 
-<Callout type="error" emoji="️🚫">
+<Callout type="error">
     **Management command** - this method is restricted to Trezor.io and can't be used in 3rd party
     applications.
 </Callout>
