--- a/packages/connect-explorer-nextra/src/pages/methods/device/setBusy.mdx
+++ b/packages/connect-explorer-nextra/src/pages/methods/device/setBusy.mdx
@@ -14,7 +14,7 @@ export const paramDescriptions = {
 
 ## Set busy
 
-<Callout type="error" emoji="️🚫">
+<Callout type="error">
     **Management command** - this method is restricted to Trezor.io and can't be used in 3rd party
     applications.
 </Callout>
