chore(connect-explorer): add links in changelog page

--- a/packages/connect-explorer/src/pages/changelog.mdx
+++ b/packages/connect-explorer/src/pages/changelog.mdx
@@ -75,7 +75,7 @@ export const Changelog = () => {
     ### Why Use Canary Releases?
     *Immediate fixes*: If your application encounters a critical issue with the current stable release, a canary version might already have the necessary fix, allowing you to resolve problems more quickly.
 
-    *Feedback Opportunity*: Using canary releases allows you to provide feedback on new features and fixes, influencing the final stable release and ensuring it works smoothly with your application. If you encounter any issue, bug, or incompatibility introduced in a Canary release, report it by creating a new issue in our repository.
+    *Feedback Opportunity*: Using canary releases allows you to provide feedback on new features and fixes, influencing the final stable release and ensuring it works smoothly with your application. If you encounter any issue, bug, or incompatibility introduced in a Canary release, report it by creating [a new issue in our repository](https://github.com/trezor/trezor-suite/issues/new/choose).
 
 </CollapsibleBox>
 
