fix(suite): Fix staking copy

--- a/packages/suite-data/files/translations/en.json
+++ b/packages/suite-data/files/translations/en.json
@@ -1784,7 +1784,7 @@
   "TR_STAKE_DAYS": "{count, plural, one {# day} other {# days}}",
   "TR_STAKE_DELEGATED": "Stake delegation",
   "TR_STAKE_DEREGISTERED": "Deregistration of a stake address",
-  "TR_STAKE_ENTERING_POOL_MAY_TAKE": "Entering the staking pool may take up to {count, plural, one {# day} few {# days} other {# days}}",
+  "TR_STAKE_ENTERING_POOL_MAY_TAKE": "Entering the staking pool may take up to {count, plural, one {# day} other {# days}}",
   "TR_STAKE_ETH": "Stake Ethereum",
   "TR_STAKE_ETH_BADGE": "New",
   "TR_STAKE_ETH_CARD_TITLE": "The easiest way to earn {symbol}.",
@@ -1835,7 +1835,7 @@
   "TR_STAKE_UNSTAKE_TO_CLAIM": "Unstake to claim",
   "TR_STAKE_UNSTAKING": "Unstaking",
   "TR_STAKE_UNSTAKING_PERIOD": "Unstaking period",
-  "TR_STAKE_UNSTAKING_TAKES": "Unstaking currently takes {count, plural, one {# day} few {# days} other {# days}}. Once completed, you can trade or send it.",
+  "TR_STAKE_UNSTAKING_TAKES": "Unstaking currently takes {count, plural, one {# day} other {# days}}. Once completed, you can trade or send it.",
   "TR_STAKE_WHAT_IS_STAKING": "What is staking?",
   "TR_STAKE_YOUR_FUNDS_MAINTAINED": "Your staked funds are <h>maintained by Everstake</h>",
   "TR_STAKING_DELEGATE": "Delegate",
