fix(connect-explorer): load changelog dynamically on client

--- a/packages/connect-explorer/src/pages/index.mdx
+++ b/packages/connect-explorer/src/pages/index.mdx
@@ -392,7 +392,7 @@ export const ExampleHeading = styled.h3`
                     },
                 ```
 
-                For manual content script injection, you can [find more information in the README](https://github.com/trezor/trezor-suite/tree/develop/packages/connect-webextension).
+                For manual content script injection, you can [find more information in the README](/readme/connect-webextension).
 
                 ### Import in the service worker
 
