--- a/packages/connect-explorer/src/pages/settings.mdx
+++ b/packages/connect-explorer/src/pages/settings.mdx
@@ -32,6 +32,7 @@ export const Settings = () => {
     }));
 
     const initError = useSelector(state => state.connect?.initError);
+    const isInitSuccess = useSelector(state => state.connect?.isInitSuccess || false);
     const isHandshakeConfirmed = useSelector(state => state.connect?.isHandshakeConfirmed || false);
     const actions = useActions({
         onSubmitInit: trezorConnectActions.onSubmitInit,
@@ -70,6 +71,11 @@ export const Settings = () => {
                 <ErrorMessage data-test="@settings/init-error">
                     Init error: {initError}
                 </ErrorMessage>
+            )}
+            {isInitSuccess && (
+                <ConfirmationMessage data-test="@settings/init-success">
+                    Init success!
+                </ConfirmationMessage>
             )}
             {isHandshakeConfirmed && (
                 <ConfirmationMessage data-test="@settings/handshake-confirmed">
