fix(suite): ts5 banner update

--- a/packages/suite-data/files/translations/en.json
+++ b/packages/suite-data/files/translations/en.json
@@ -1476,7 +1476,7 @@
   "TR_PLEASE_CONNECT_YOUR_DEVICE": "Please connect your device to continue with the verification process.",
   "TR_PLEASE_ENABLE_PASSPHRASE": "Please enable the passphrase feature to continue with the verification process.",
   "TR_POLICY_ID_ADDRESS": "Policy ID:",
-  "TR_PREORDER_NOW": "Pre-order now",
+  "TR_PREORDER_NOW": "Order now",
   "TR_PRIMARY_FIAT": "Fiat currency",
   "TR_PRIVATE": "Private",
   "TR_PRIVATE_DESCRIPTION": "Privacy at least {targetAnonymity}",
